Bug #44963
fix MClientCaps::FLAG_SYNC in check_caps
% Done:
0%
Source:
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
libcephfs
Labels (FS):
Pull request ID:
Crash signature:
Description
Sidharth noticed that we were probably issuing more FLAG_SYNC cap messages than is really required. What we're mostly interested in expediting is dirty cap flushes, so we really only need to set FLAG_SYNC when flushing auth caps that are dirty.
Related issues
History
#1 Updated by Jeff Layton 11 months ago
- Status changed from New to Resolved
- Pull request ID set to 44963
PR merged for Octopus.
#2 Updated by Patrick Donnelly 10 months ago
- Status changed from Resolved to Pending Backport
- Target version set to v16.0.0
- Backport set to octopus,nautilus
- Pull request ID changed from 44963 to 34455
#3 Updated by Nathan Cutler 10 months ago
- Copied to Backport #45477: octopus: fix MClientCaps::FLAG_SYNC in check_caps added
#4 Updated by Nathan Cutler 10 months ago
- Copied to Backport #45478: nautilus: fix MClientCaps::FLAG_SYNC in check_caps added
#5 Updated by Nathan Cutler 9 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".